# tfwh

./: .gitignore  CNAME  Makefile  README.md  errata.html  index.html  style.css  tfwh.cabal
app/: anagrams.hs  cwords.hs  song.hs
data/: LoversLaboursLost.txt
doc/: TFwH-Anagrams.html  TFwH-Chap01-ExA.html  TFwH-Chap01-ExB.html  TFwH-Chap01-ExC.html  TFwH-Chap01-ExD.html  TFwH-CommonWords.html  TFwH-NumbersIntoWords.html  TFwH-OneManWentToMow.html  index.html  mini_TFwH-Anagrams.html  mini_TFwH-Chap01-ExA.html  mini_TFwH-Chap01-ExB.html  mini_TFwH-Chap01-ExE.html  mini_TFwH-Chap01.html  mini_TFwH-CommonWords.html  tfwh.haddock
doc/src/: TFwH.Chap01.ExB.html  TFwH.Chap01.ExC.html  TFwH.CommonWords.html  TFwH.OneManWentToMow.html
docs/: TFwH-Anagrams.html  TFwH-Chap01-ExA.html  TFwH-Chap01-ExB.html  TFwH-Chap01-ExC.html  TFwH-Chap01-ExD.html  TFwH-Chap01-ExE.html  TFwH-Chap01-ExF.html  TFwH-Chap01-ExG.html  TFwH-Chap01.html  TFwH-Chap02-ExA.html  TFwH-Chap02-ExB.html  TFwH-Chap02-ExC.html  TFwH-Chap02-ExD.html  TFwH-Chap02-ExE.html  TFwH-Chap02-ExF.html  TFwH-Chap02-ExG.html  TFwH-Chap02-ExH.html  TFwH-Chap02-ExI.html  TFwH-Chap02.html  TFwH-Chap03-ExA.html  TFwH-Chap03-ExB.html  TFwH-Chap03-ExC.html  TFwH-Chap03-ExD.html  TFwH-Chap03-ExE.html  TFwH-Chap03-ExF.html  TFwH-Chap03-ExG.html  TFwH-Chap03.html  TFwH-CommonWords.html  TFwH-NumbersIntoWords.html  TFwH-OneManWentToMow.html  doc-index.html  index.html  mini_TFwH-Chap01-ExC.html  mini_TFwH-Chap01-ExD.html  mini_TFwH-Chap01-ExF.html  mini_TFwH-Chap01-ExG.html  mini_TFwH-Chap02-ExA.html  mini_TFwH-Chap02-ExB.html  mini_TFwH-Chap02-ExC.html  mini_TFwH-Chap02-ExD.html  (+18 more)
docs/src/: TFwH.Anagrams.html  TFwH.Chap01.ExA.html  TFwH.Chap01.ExC.html  TFwH.Chap01.ExD.html  TFwH.Chap01.ExE.html  TFwH.Chap01.ExF.html  TFwH.Chap01.ExG.html  TFwH.Chap01.html  TFwH.Chap02.ExA.html  TFwH.Chap02.ExB.html  TFwH.Chap02.ExC.html  TFwH.Chap02.ExD.html  TFwH.Chap02.ExE.html  TFwH.Chap02.ExF.html  TFwH.Chap02.ExG.html  TFwH.Chap02.ExH.html  TFwH.Chap02.ExI.html  TFwH.Chap02.html  TFwH.Chap03.ExA.html  TFwH.Chap03.ExB.html  TFwH.Chap03.ExC.html  TFwH.Chap03.ExD.html  TFwH.Chap03.ExE.html  TFwH.Chap03.ExF.html  TFwH.Chap03.ExG.html  TFwH.Chap03.html  TFwH.NumbersIntoWords.html
src/TFwH/: Anagrams.hs  Chap01.hs  Chap02.hs  Chap03.hs  Chap04.hs  CommonWords.hs  NumbersIntoWords.lhs  OneManWentToMow.hs
src/TFwH/Chap01/: ExA.hs  ExB.hs  ExC.hs  ExD.hs  ExE.hs  ExF.hs  ExG.hs
src/TFwH/Chap02/: ExA.hs  ExB.hs  ExC.hs  ExD.hs  ExE.hs  ExF.hs  ExG.hs  ExH.hs  ExI.hs
src/TFwH/Chap03/: ExA.hs  ExB.hs  ExC.hs  ExD.hs  ExE.hs  ExF.hs  ExG.hs
src/TFwH/Chap04/: ExA.hs  ExB.hs  ExC.hs  ExD.hs  ExE.hs
test/: doctestings.hs
test/TFwH/Chap01/: ExASpec.hs  ExBSpec.hs  ExCSpec.hs  ExDSpec.hs  ExESpec.hs
