name:                tfwh
version:             0.2.3.2
-- synopsis:
-- description:
homepage:            https://github.com/nobsun/tfwh#readme
license:             BSD3
license-file:        LICENSE
author:              Nobuo Yamashita
maintainer:          nobsun@sampou.org
copyright:           2017 Nobuo Yamshita
category:            Tutorial
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
data-dir:            data

library
  hs-source-dirs:      src
  exposed-modules:     TFwH.Anagrams
                     , TFwH.CommonWords
                     , TFwH.NumbersIntoWords
                     , TFwH.OneManWentToMow
                     , TFwH.Chap01
                     , TFwH.Chap02
                     , TFwH.Chap01.ExA
                     , TFwH.Chap01.ExB
                     , TFwH.Chap01.ExC
                     , TFwH.Chap01.ExD
                     , TFwH.Chap01.ExE
                     , TFwH.Chap01.ExF
                     , TFwH.Chap01.ExG
                     , TFwH.Chap02.ExA
                     , TFwH.Chap02.ExB
                     , TFwH.Chap02.ExC

  build-depends:       base >= 4.7 && < 5
                     , hspec >= 2.4.2
  default-language:    Haskell2010

executable anagrams
  hs-source-dirs:      app
  main-is:             anagrams.hs
  ghc-options:         -rtsopts
  build-depends:       base
                     , tfwh
  default-language:    Haskell2010

executable song
  hs-source-dirs:      app
  main-is:             song.hs
  ghc-options:         -rtsopts
  build-depends:       base
                     , tfwh
  default-language:    Haskell2010

executable cwords
  hs-source-dirs:      app
  main-is:             cwords.hs
  ghc-options:         -rtsopts
  build-depends:       base
                     , tfwh
  default-language:    Haskell2010
                       
test-suite doctest
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test, src
  main-is:             doctestings.hs
  build-depends:       QuickCheck
                     , base >= 4.7 && < 5
                     , doctest >= 0.11.1
                     , hspec >= 2.4.2
                     , tfwh
  ghc-options:         -rtsopts
  default-language:    Haskell2010

test-suite tfwh-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       QuickCheck
                     , base >= 4.7 && < 5
                     , hspec >= 2.4.2
                     , tfwh
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  other-modules:       TFwH.Chap01.ExASpec
                     , TFwH.Chap01.ExBSpec
                     , TFwH.Chap01.ExCSpec
                     , TFwH.Chap01.ExDSpec
                     , TFwH.Chap01.ExESpec

source-repository head
  type:     git
  location: https://github.com/nobsun/tfwh
